fix: meta description

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Olpay - Coming Soon</title>
     <link rel="stylesheet" href="./index.css" />
+    <meta
+      name="description"
+      content="Olpay is an end-to-end payment solution for small and medium
+      businesses enabling them to accept Apple Pay, Google Pay, QR, card
+      and biometric payments using the facial recognition."
+    />
+    <meta name="keywords" content="Biometic payments" />
   </head>
   <body>
     <div class="main container">
@@ -53,7 +60,7 @@
             <p id="q1a" class="answer hidden">
               Olpay is an end-to-end payment solution for small and medium
               businesses enabling them to accept Apple Pay, Google Pay, QR, card
-              and biometric payments using the facial recognition. .
+              and biometric payments using the facial recognition.
             </p>
           </div>
 
