--- a/index.html
+++ b/index.html
@@ -66,10 +66,13 @@
           <img src="./assets/accept.png" />
         </div>
         <div class="accept order-1">
-          <h1 class="heading-2">Accept payments with your own device</h1>
+          <h1 class="heading-2">
+            End-to-end payment solution for small and medium businesses
+          </h1>
           <p class="subheading">
-            Olpay converts your device into a digital POS machine, which is
-            usable in daily life.
+            You can use an Android and iOS app for merchants that converts
+            regular mobile device into a soft POS and allows merchants to
+            process payments.
           </p>
         </div>
       </div>
@@ -79,9 +82,9 @@
           <img src="./assets/tap-to-pay.svg" />
           <h2>Tap to pay</h2>
           <span
-            >Quick payments by just tapping your device using the NFC
-            reader</span
-          >
+            >Tap-on-Phone technology powered by Mastercard and local payment
+            solution providers.
+          </span>
         </div>
         <div class="box">
           <img src="./assets/qr-pay.svg" />
@@ -95,8 +98,8 @@
           <img src="./assets/security.svg" />
           <h2>100% Secure</h2>
           <span
-            >Your funds and payments are under control of secure
-            technology</span
+            >We protect users' purchase data and guarantee transparency and
+            clarity throughout the payment process.</span
           >
         </div>
       </div>
@@ -104,11 +107,11 @@
       <div class="body">
         <div class="content">
           <h1 class="heading-2">
-            Mobile app that converts your device into a POS
+            Not limited to using digital wallets, account to account payments
           </h1>
           <p class="subheading">
-            Introducing Hassle-Free Way of Accepting Payments for Small and
-            Medium Businesses.
+            We support Apple Pay, Google Pay, QR, card and biometric payments
+            using facial recognition.
           </p>
         </div>
         <div class="image">
@@ -121,10 +124,13 @@
           <img src="./assets/left-2.png" />
         </div>
         <div class="accept order-1">
-          <h1 class="heading-2">Accept payments with your own device</h1>
+          <h1 class="heading-2">
+            Saving merchants tons of time and providesLegacy POS terminals
+          </h1>
           <p class="subheading">
-            Olpay converts your device into a digital POS machine, which is
-            usable in daily life.
+            Maintaining a hardware terminal and this old device, getting support
+            from the local provider bank and constantly feeding in printing
+            paper is exhausting.
           </p>
         </div>
       </div>
@@ -163,11 +169,11 @@
             <img src="./assets/analytics-1.png" />
           </div>
           <div class="analytics-bottom">
-            <h2>Hassle-free & Fully digital</h2>
+            <h2>Manage transactions</h2>
             <span
-              >With no integration required and a digital receipt experience,
-              Olpay brings an eco-friendly and hassle- free business
-              launch.</span
+              >Our product not only offers payment flexibility and convenience
+              to maximize conversion but also reduces fraud and increases
+              transaction speed.</span
             >
           </div>
         </div>
@@ -176,10 +182,11 @@
             <img src="./assets/analytics-2.png" />
           </div>
           <div class="analytics-bottom">
-            <h2>Freedom of doing business</h2>
+            <h2>Detailed analytics</h2>
             <span
-              >With an all-in-one payment solution, reporting, and transaction
-              history, Olpay gives the power back to the merchants.</span
+              >Payment analytics can benefit businesses by providing insights
+              into their revenues, payment trends, and customer shopping
+              behavior.</span
             >
           </div>
         </div>
@@ -313,7 +320,7 @@
       <div class="footer-top container ml-auto mr-auto">
         <img class="footer-logo" src="./assets/logo_soon.svg" />
         <div class="sponsored-by">
-          <span>Sponsored by</span>
+          <span>Supported by</span>
           <img src="./assets/mastercard.png" class="footer-mastercard" />
           <img src="./assets/techstars-black.png" class="footer-techstars" />
         </div>
